[package]
name = "webhooks_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = {version = "0.3", features = ["tls"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
teloxide = "0.12"
log = "0.4.22"
env_logger = "0.11.3"
log4rs = "1.2.0"
lazy_static = "1.4"
anyhow = "1.0"
uuid = { version = "1.9.1", features = ["v4"] } #for unique file names
tokio-util = "0.7.11"
mp4ameta = "0.11"
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
rand = "0.8"
regex = "1.10.5"